--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <base href="/">
     <title>Document</title>
-<link href="assets/css/styles.css" rel="stylesheet"></head>
+</head>
 <body>
     <div id="app"></div>
-<script type="text/javascript" src="js/bundle.js"></script></body>
+</body>
 </html>
